fix encrypt data