@@ -1,6 +1,7 @@
 package com.example.ecommerce.security;
 
 import org.apache.tomcat.util.codec.binary.Base64;
+import sun.misc.BASE64Decoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
@@ -24,6 +25,26 @@ public class EncyptData {
         }
         return null;
     }
+    public static String decrypt1(String text) throws Exception{
+        Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
+
+        //setup key
+        byte[] keyBytes= new byte[500];
+        byte[] b= key.getBytes("UTF-8");
+        int len= b.length;
+        if (len > keyBytes.length) len = keyBytes.length;
+        System.arraycopy(b, 0, keyBytes, 0, len);
+        SecretKeySpec keySpec = new SecretKeySpec(keyBytes, "AES");
+        IvParameterSpec ivSpec = new IvParameterSpec(keyBytes);
+        cipher.init(Cipher.DECRYPT_MODE,keySpec,ivSpec);
+
+        BASE64Decoder decoder = new BASE64Decoder();
+        byte [] results = cipher.doFinal(decoder.decodeBuffer(text));
+        return new String(results,"UTF-8");
+
+    }
+
+
     public static String decrypt(String encrypted) {
         try {
             IvParameterSpec iv = new IvParameterSpec(initVector.getBytes("UTF-8"));
@@ -31,7 +52,8 @@ public class EncyptData {
 
             Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5PADDING");
             cipher.init(Cipher.DECRYPT_MODE, skeySpec, iv);
-            byte[] original = cipher.doFinal(Base64.decodeBase64(encrypted));
+            BASE64Decoder decoder = new BASE64Decoder();
+            byte[] original = cipher.doFinal(decoder.decodeBuffer(encrypted));
 
             return new String(original);
         } catch (Exception ex) {
